force-app/main/default/objects/Purchase_Log__c/Purchase_Log__c.object-meta.xml
<CustomObject>
    <label>Purchase Log</label>
    <nameField>
        <displayFormat>PURCHASELOG-{0000000}</displayFormat>
        <label>Purchase Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>