force-app/main/default/objects/Purchase_Log__c/fields/Charge_to_GC__c.field-meta.xml
<CustomField>
    <fullName>Charge_to_GC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge to GC</label>
    <type>Checkbox</type>
</CustomField>