force-app/main/default/objects/Purchase_Log__c/fields/Credit_Card_Used__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Used__c</fullName>
    <label>Credit Card Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PNC BANK Debit 0194</fullName>
            </value>
            <value>
                <fullName>AmerExp-7894</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>