force-app/main/default/objects/Purchase_Log__c/fields/Image_for_ListView__c.field-meta.xml
<CustomField>
    <fullName>Image_for_ListView__c</fullName>
    <label>Image for ListView</label>
    <type>Url</type>
</CustomField>