force-app/main/default/objects/Purchase_Log__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Purchase Logs</relationshipLabel>
    <relationshipName>Purchase_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>