force-app/main/default/objects/Purchase_Log__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>