force-app/main/default/objects/Purchase_Log__c/fields/Our_Check_No__c.field-meta.xml
<CustomField>
    <fullName>Our_Check_No__c</fullName>
    <label>Our Check No</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>