force-app/main/default/objects/Purchase_Log__c/fields/Receiving_Subcontractor__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Subcontractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving Subcontractor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Subcontractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Logs (Receiving Subcontractor)</relationshipLabel>
    <relationshipName>Purchase_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>