force-app/main/default/objects/Purchase_Log__c/fields/Reimbursee_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Reimbursee_s_Name__c</fullName>
    <inlineHelpText>Person or Entity to Reimburse</inlineHelpText>
    <label>Reimbursee&apos;s Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>