force-app/main/default/objects/Purchase_Log__c/fields/Reimbursement_Needed__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reimbursement Needed</label>
    <type>Checkbox</type>
</CustomField>