force-app/main/default/objects/Purchase_Log__c/fields/Supplier_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Ticket__c</fullName>
    <label>Supplier Ticket #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>