force-app/main/default/objects/Purchase_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>ListView_Thumbnail__c</columns>
    <columns>Job__c</columns>
    <columns>Supplier__c</columns>
    <columns>Material__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>